<resources>
    <string name="app_name">ContactList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="start_fragment_label">Start Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_start_fragment">Hello start fragment. Arg: %1$s</string>

    <string name="save">Salvar</string>
    <string name="delete">Remover</string>
    <string name="cancel">Cancelar</string>
    <string name="ct_code_hint">Código</string>
    <string name="ct_name_hint">Nome</string>
    <string name="ct_phone_hint">Fone</string>
    <string name="ct_nickname_hint">Apelido</string>
    <string name="image_contact_description">Imagem do contato</string>
    <string name="nickname_contact">Apelido</string>
    <string name="Call">ligar</string>
</resources>